banner title and navbar positin fixed. z-index added

--- a/style.css
+++ b/style.css
@@ -6,6 +6,10 @@ body{
 .headercontainer{
     position: fixed;
     width: 100%;
+    overflow-y: scroll;
+    /* scroll-padding: 100px; */
+    z-index:10;
+    overflow: hidden;
 
 }
 .allnavbar{
@@ -13,6 +17,8 @@ body{
     left: 0;
     right: 0;
     top: 0;
+    
+    
     
     
 }
@@ -97,4 +103,31 @@ body{
     background-repeat: no-repeat;
     background-size: cover;
     padding-top: 98px;
+}
+.title_header{
+    font-size: 38px;
+    color: #FFFFFF;
+    font-weight: 600;
+    margin-bottom: 10px;
+    padding: 0 20px;
+}
+.subtitle{
+    color: #FFFFFF;
+    font-weight: 300;
+    font-size: 20px;;
+}
+.banner .title{
+    display: block;
+    text-align: center;
+    position: absolute;
+    z-index: 5;
+    left: 0;
+    right: 0;
+    top: 0;
+    padding-top: 18vh;
+    letter-spacing: 1px;
+    background-image: linear-gradient(to top, rgba(0, 0, 0, 0) 0%, #000000 100%);
+}
+section{
+    padding-top: 20px;
 }
